--- a/RentaCars.DALTests/RentaCars.DALTests.csproj
+++ b/RentaCars.DALTests/RentaCars.DALTests.csproj
@@ -58,6 +58,8 @@
   <ItemGroup>
     <Compile Include="EstadoDALTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RentaDALTests.cs" />
+    <Compile Include="ReservaDALTests.cs" />
     <Compile Include="Tipo_UsuarioDALTests.cs" />
     <Compile Include="UsuarioDALTests.cs" />
     <Compile Include="VehiculoDALTests.cs" />
